[package]
name = "protocol-mve-transport"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
protocol = { git = "https://github.com/noocene/protocol" }
thiserror = { git = "https://github.com/noocene/thiserror" }
futures = { version = "0.3.4" }
core-error = { git = "https://github.com/core-error/core-error" }
void = "1.0.2"
bincode = "1.2.1"
erasure-traits = { git = "https://github.com/noocene/erasure-traits", optional = true }
piper = "0.1.3"

[features]
vessels = ["erasure-traits"]
default = []
